@@ -6,23 +6,21 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.HashMap;
 
-
 public class StockFish {
     private static final String API_ENDPOINT = "https://stockfish.online/api/s/v2.php";
     public static HashMap<String, String> getUserFen = new HashMap<>();
-
 
     public StockFish() {
 
     }
 
-   
     public static String getBestMove(int depth, String fen) {
         try {
 
@@ -30,16 +28,12 @@ public class StockFish {
                     URLEncoder.encode(fen, StandardCharsets.UTF_8),
                     depth);
 
-
-            URL url = new URL(API_ENDPOINT + "?" + queryString);
-
+            URL url = new URI(API_ENDPOINT + "?" + queryString).toURL();
 
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
 
-
             int responseCode = connection.getResponseCode();
-
 
             if (responseCode == HttpURLConnection.HTTP_OK) {
 
@@ -73,6 +67,5 @@ public class StockFish {
         }
         return "error!";
     }
-
 
 }
